# Otus-Cpp-2023-HW-4-SFINAE

./: CMakeLists.txt  Doxyfile  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8h.html  main_8h_source.html  print__ip_8h.html  print__ip_8h__dep__incl.map  print__ip_8h__incl.map  print__ip_8h__incl.md5  print__ip_8h_source.html  print_ip.h
.github/workflows/: auto_gen_documentation.yml  release.yml
search/: all_1.js  functions_1.js
